--- a/framework/index.html
+++ b/framework/index.html
@@ -2,26 +2,45 @@
 <html>
   <head>
     <link href="css/main.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Work+Sans:100,300" rel="stylesheet">    
   </head>
   <body>
   <div class="grid">
-    <div class="row">
-      <div class="col-2">2 Columns</div>
-      <div class="col-10">10 Columns</div>
+    <div class="row" id="header-title">
+      <div class="col-6">
+        <img src="http://placehold.it/100x100">
+      </div>
+      <div style="text-align: right;" class="col-6">
+        <h1>Jane Doette</h1>
+        <h3>Front-end Ninja</h3>
+      </div>
+    </div>
+    <div class="row" id="splash">
+      <div class="col-12">
+        <img src="http://placehold.it/1000x350">
+      </div>
     </div>
     <div class="row">
-      <div class="col-3">3 Columns</div>
-      <div class="col-9">9 Columns</div>
+      <div class="col-12" id="header-sub">
+        <h2>Featured Work</h2>
+      </div>
     </div>
-    <div class="row">
-      <div class="col-4">4 Columns</div>
-      <div class="col-4">4 Columns</div>
-      <div class="col-4">4 Columns</div>
-    </div>
-    <div class="row">
-      <div class="col-3">3 Columns</div>
-      <div class="col-6">6 Columns</div>
-      <div class="col-3">3 Columns</div>
+    <div class="row" id="featured">
+      <div class="col-4">
+        <img src="http://placehold.it/320x200">
+        <h3>Appify</h3>
+        <p><a href="https://github.com/udacity/Appify/">https://github.com/udacity/Appify/</a></p>
+      </div>
+      <div class="col-4">
+        <img src="http://placehold.it/320x200">
+        <h3>Sunflower</h3>
+        <p><a href="https://github.com/udacity/Sunflower/">https://github.com/udacity/Sunflower/</a></p>
+      </div>
+      <div class="col-4">
+        <img src="http://placehold.it/320x200">
+        <h3>Bokeh</h3>
+        <p><a href="https://github.com/udacity/Bokeh/">https://github.com/udacity/Bokeh/</a></p>
+      </div>
     </div>
   </div>
   </body>
