Complete initial revision.

--- a/framework/index.html
+++ b/framework/index.html
@@ -2,46 +2,56 @@
 <html>
   <head>
     <link href="css/main.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Work+Sans:100,300" rel="stylesheet">    
+    <link href="https://fonts.googleapis.com/css?family=Work+Sans:100,300,400" rel="stylesheet">
+    <title>Jane Doette &ndash; Front-end Ninja</title>
   </head>
   <body>
   <div class="grid">
     <div class="row" id="header-title">
       <div class="col-6">
-        <img src="http://placehold.it/100x100">
+        <img class="header-icon" src="images/udacity.png" width="120" height="120">
       </div>
-      <div style="text-align: right;" class="col-6">
+      <div class="col-6 header-text">
         <h1>Jane Doette</h1>
         <h3>Front-end Ninja</h3>
       </div>
     </div>
     <div class="row" id="splash">
       <div class="col-12">
-        <img src="http://placehold.it/1000x350">
+        <img src="images/html-text.jpg">
       </div>
     </div>
     <div class="row">
-      <div class="col-12" id="header-sub">
+      <div class="col-12" id="featured-sub">
         <h2>Featured Work</h2>
       </div>
     </div>
-    <div class="row" id="featured">
+    <div class="row">
       <div class="col-4">
-        <img src="http://placehold.it/320x200">
+        <img src="images/appify.jpg">
+      </div>
+      <div class="col-4" id="featured-image-center">
+        <img src="images/sunflower.jpg">
+      </div>
+      <div class="col-4" id="featured-image-right">
+        <img src="images/bokeh.jpg">
+      </div>
+    </div>
+    <div class="row" id="featured-links">
+      <div class="col-4">
         <h3>Appify</h3>
         <p><a href="https://github.com/udacity/Appify/">https://github.com/udacity/Appify/</a></p>
       </div>
       <div class="col-4">
-        <img src="http://placehold.it/320x200">
         <h3>Sunflower</h3>
         <p><a href="https://github.com/udacity/Sunflower/">https://github.com/udacity/Sunflower/</a></p>
       </div>
       <div class="col-4">
-        <img src="http://placehold.it/320x200">
         <h3>Bokeh</h3>
         <p><a href="https://github.com/udacity/Bokeh/">https://github.com/udacity/Bokeh/</a></p>
       </div>
     </div>
+
   </div>
   </body>
 </html>
