--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script type="text/javascript" src="js/jquery.min.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Work+Sans:100,300,400" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <title>Jane Doette &ndash; Front-end Ninja</title>
@@ -14,10 +14,10 @@
   <body>
   <div class="container">
     <div class="row" id="header-title">
-      <div class="col-md-6">
-        <img class="header-icon" src="images/udacity.png" width="120" height="120">
+      <div class="hidden-xs col-sm-4 col-md-6">
+        <img class="header-icon img-responsive" src="images/udacity.png" width="120" height="120">
       </div>
-      <div class="col-md-6 text-right text-uppercase">
+      <div class="col-xs-12 col-sm-8 col-md-6 text-right text-uppercase">
         <h1>Jane Doette</h1>
         <h3>Front-end Ninja</h3>
       </div>
@@ -28,7 +28,7 @@
         </div>
     </div>
     <div class="row" id="splash">
-      <div class="col-md-12">
+      <div class="hidden-xs col-md-12">
         <img class="img-responsive" src="images/html-text.jpg">
       </div>
     </div>
@@ -39,17 +39,17 @@
     </div>
     <div class="row text-center" id="featured-links">
       <div class="col-md-4">
-        <img class="img-responsive" data-toggle="modal" data-target="#appify" src="images/appify.jpg">
+        <img class="img-responsive center-block" data-toggle="modal" data-target="#appify" src="images/appify.jpg">
         <h3 class="text-uppercase">Appify</h3>
         <p><a href="https://github.com/udacity/Appify/">https://github.com/udacity/Appify/</a></p>
       </div>
       <div class="col-md-4">
-        <img class="img-responsive" data-toggle="modal" data-target="#sunflower" src="images/sunflower.jpg">
+        <img class="img-responsive center-block" data-toggle="modal" data-target="#sunflower" src="images/sunflower.jpg">
         <h3 class="text-uppercase">Sunflower</h3>
         <p><a href="https://github.com/udacity/Sunflower/">https://github.com/udacity/Sunflower/</a></p>
       </div>
       <div class="col-md-4">
-        <img class="img-responsive" data-toggle="modal" data-target="#bokeh" src="images/bokeh.jpg">
+        <img class="img-responsive center-block" data-toggle="modal" data-target="#bokeh" src="images/bokeh.jpg">
         <h3 class="text-uppercase">Bokeh</h3>
         <p><a href="https://github.com/udacity/Bokeh/">https://github.com/udacity/Bokeh/</a></p>
       </div>
@@ -60,7 +60,7 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h4 class="modal-title" id="myModalLabel">Appify Page</h4>
+                    <h4 class="modal-title" id="appify-title">Appify Page</h4>
                 </div>
                 <div class="modal-body">
                     <img class="img-responsive" src="images/555.jpeg">
@@ -77,7 +77,7 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h4 class="modal-title" id="myModalLabel">Sunflower Page</h4>
+                    <h4 class="modal-title" id="sunflower-title">Sunflower Page</h4>
                 </div>
                 <div class="modal-body">
                     <img class="img-responsive" src="images/555.jpeg">
@@ -94,7 +94,7 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h4 class="modal-title" id="myModalLabel">Bokeh Page</h4>
+                    <h4 class="modal-title" id="bokeh-title">Bokeh Page</h4>
                 </div>
                 <div class="modal-body">
                     <img class="img-responsive" src="images/555.jpeg">
