--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -38,17 +38,17 @@
       </div>
     </div>
     <div class="row text-center" id="featured-links">
-      <div class="col-md-4">
+      <div class="col-sm-6 col-md-4">
         <img class="img-responsive center-block" data-toggle="modal" data-target="#appify" src="images/appify.jpg">
         <h3 class="text-uppercase">Appify</h3>
         <p><a href="https://github.com/udacity/Appify/">https://github.com/udacity/Appify/</a></p>
       </div>
-      <div class="col-md-4">
+      <div class="col-sm-6 col-md-4">
         <img class="img-responsive center-block" data-toggle="modal" data-target="#sunflower" src="images/sunflower.jpg">
         <h3 class="text-uppercase">Sunflower</h3>
         <p><a href="https://github.com/udacity/Sunflower/">https://github.com/udacity/Sunflower/</a></p>
       </div>
-      <div class="col-md-4">
+      <div class="col-sm-6 col-md-4">
         <img class="img-responsive center-block" data-toggle="modal" data-target="#bokeh" src="images/bokeh.jpg">
         <h3 class="text-uppercase">Bokeh</h3>
         <p><a href="https://github.com/udacity/Bokeh/">https://github.com/udacity/Bokeh/</a></p>
